Themes front page partner section for all screen widths.

--- a/src/components/components/organization-teaser/organization-teaser.scss
+++ b/src/components/components/organization-teaser/organization-teaser.scss
@@ -1,11 +1,17 @@
+@import "../../base-styles/init/init";
+
 // Organization for front page listing.
 .organization-teaser {
-  padding: 0 10px;
   display: flex;
   justify-content: center;
   align-items: center;
   height: 100%;
   opacity: .5;
+  padding: 10px 20px;
+
+  @include breakpoint($tablet) {
+    padding: 0 10px;
+  }
 
   &:hover,
   &:focus {
