--- a/src/components/components/organizations-list/organizations-list.scss
+++ b/src/components/components/organizations-list/organizations-list.scss
@@ -1,5 +1,35 @@
+@import './../../base-styles/init/init.scss';
+
 .organizations-list {
-  display: flex;
-  justify-content: space-around;
-  width: 100%;
+  &__title {
+    position: relative;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 15px;
+
+    @include breakpoint($tablet) {
+      margin-bottom: 10px;
+    }
+
+    &-wrapper {
+      display: flex;
+      justify-content: center;
+    }
+  }
+
+  &__shape {
+    opacity: .5;
+    position: absolute;
+    right: -16px;
+    bottom: -11px;
+    left: auto;
+    width: 52px;
+    height: auto;
+
+    @include breakpoint($tablet) {
+      right: -28px;
+      bottom: -13px;
+      width: 86px;
+    }
+  }
 }
