--- a/src/components/components/member-teaser/member-teaser.scss
+++ b/src/components/components/member-teaser/member-teaser.scss
@@ -41,8 +41,8 @@
   }
 
   &__name {
-    @include padding-top(5px);
-    @include font-size(15px)
+    @include padding-top(8px);
+    @include font-size(15px);
     @include line-height(18px);
     display: block;
     align-self: flex-start;
@@ -64,20 +64,66 @@
   }
 
   &__leader-tag {
+    @include font-size(11px);
+    @include line-height(20px);
     position: absolute;
-    background-color: color('blue-dark');
     color: color('white');
-    font-size: 11px;
+    z-index: 0;
     font-weight: bold;
     top: 0;
     right: 0;
-    padding: 3px;
     text-transform: uppercase;
+    border-radius: 0 4px 0 0;
+    padding: 0 7px 0 0;
+    display: block;
+    background-color: color('blue-dark');
+  }
+
+  &__leader-tag-bg {
+    width: 12px;
+    height: 20px;
+    overflow: hidden;
+    position: absolute;
+    display: block;
+    left: -12px;
+  }
+
+  &__leader-tag-top {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 50%;
+    background: color('blue-dark');
+    display: block;
+    z-index: -1;
+
+  }
+
+  &__leader-tag-bottom {
+    position: absolute;
+    background: white;
+    top: 0;
+    left: -6px;
+    width: 12px;
+    height: 20px;
+    border-radius: 20px;
+    display: block;
+  }
+
+  &__leader-tag-bg-bottom {
+    position: absolute;
+    background: color('blue-dark');
+    bottom: 0;
+    left: 6px;
+    width: 12px;
+    height: 20px;
+    border-radius: 20px;
+    display: block;
+
   }
 
   &--leader {
     position: relative;
-
-
   }
 }
