Fixes shapes visual regression.

--- a/src/components/components/shape/shape.scss
+++ b/src/components/components/shape/shape.scss
@@ -21,7 +21,7 @@
 // .shape--divider: shape works as visual section divider.
 
 .shape {
-  display: block;
+  display: inline-block;
 
   svg {
     width: 100%;
