Polishes about page.

--- a/src/components/base-styles/base/normalize.scss
+++ b/src/components/base-styles/base/normalize.scss
@@ -22,6 +22,7 @@
 @import 'embedded/embedded';
 @import 'slice/slice';
 @import 'icon/icon';
+@import 'text-column/text-column';
 @import 'forms/components/button/button';
 @import 'forms/forms';
 @import 'forms/components/autocomplete/autocomplete';
