--- a/src/components/components/member/member.scss
+++ b/src/components/components/member/member.scss
@@ -4,8 +4,62 @@
   display: block;
   margin-left: auto;
   margin-right: auto;
-  width: 330px;
   text-align: center;
+  padding-top: 90px;
+
+  &__inner {
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+  }
+
+  &__card {
+    max-width: 330px;
+    width: 100%;
+    position: relative;
+    display: flex;
+
+    &-inner {
+      position: relative;
+      z-index: 1;
+      width: 100%;
+      min-width: 100%;
+      transform: translateX(-100%);
+      padding: 30px 25px;
+    }
+
+    &-shape-wrapper {
+      overflow: hidden;
+      width: 100%;
+      min-width: 100%;
+      position: relative;
+      z-index: 0;
+    }
+
+    // Shape positioning in card.
+    .member__shape {
+      position: absolute;
+      z-index: 0;
+
+      &--circle {
+        left: 48%;
+        top: -49px;
+      }
+
+      &--square {
+        left: 50%;
+        top: 0;
+        transform: rotate(15deg) translate(-52%, -7%);
+      }
+
+      &--triangle {
+        left: 27%;
+        top: 30px;
+      }
+    }
+  }
 
   &__name {
     margin-top: 10px;
@@ -13,6 +67,10 @@
     margin-right: auto;
     max-width: 275px;
     word-wrap: break-word;
+  }
+
+  &__divider {
+   width: 45px;
   }
 
   &__image-wrapper {
@@ -24,8 +82,7 @@
     margin-right: auto;
     border-radius: 100%;
     background-color: color('white');
-    box-shadow: 0px 2px 2px 0px rgba(0,0,0,0.1);
-
+    box-shadow: 0 2px 2px 0 rgba(0,0,0,0.1);
   }
 
   &__image-inner {
@@ -37,10 +94,9 @@
   }
 
   &__image {
-    width: auto;
-    max-width: 100%;
-    height: auto;
-    max-height: 100%;
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
   }
 
   &__location {
@@ -59,8 +115,6 @@
   }
 
   &__club {
-    @include margin-top(64px);
-    @include margin-bottom(58px);
     max-width: 275px;
     margin-left: auto;
     margin-right: auto;
@@ -76,11 +130,6 @@
     word-break: break-all;
     margin-left: auto;
     margin-right: auto;
-
-
-    &--personal-page {
-      @include margin-bottom(26px);
-    }
   }
 
   &__link-content {
@@ -92,10 +141,6 @@
     width: 24px;
     height: 24px;
     color: color('light-navy');
-  }
-
-  &__button-list {
-    @include margin-top(23px);
   }
 
   &__button {
@@ -115,5 +160,55 @@
 
   &__form-input {
     padding: 0;
+  }
+
+  // Shapes.
+  &__shape {
+    &--circle {
+      width: 218px;
+      height: 218px;
+      opacity: .3;
+    }
+
+    &--square {
+      width: 208px;
+      height: 208px;
+      opacity: .44;
+      transform: rotate(15deg);
+    }
+
+    &--triangle {
+      transform: scale(1.8) rotate(-94deg);
+      opacity: .3;
+    }
+
+    // Positioning.
+    &-wrapper-left {
+      position: absolute;
+      display: inline-block;
+      left: 40px;
+      bottom: 90px;
+      z-index: -1;
+
+      .member__shape {
+        &--triangle {
+          position: relative;
+          left: 40px;
+        }
+
+        &--circle {
+          position: relative;
+          bottom: -60px;
+        }
+      }
+    }
+
+    &-wrapper-right {
+      position: absolute;
+      right: 50px;
+      top: 0;
+      z-index: -1;
+    }
+
   }
 }
