--- a/src/components/components/club-full/club-full.scss
+++ b/src/components/components/club-full/club-full.scss
@@ -1,5 +1,9 @@
 @import './../../base-styles/init/init';
 
+/*
+  The full view of a club.
+*/
+
 .club-full {
   &__cover-wrapper {
     background: red;
@@ -42,13 +46,17 @@
     @include margin-top(68px);
   }
 
+  // FIXME: the class does not effect the element.
+  &__description {
+    padidng-right: 20px;
+  }
+
   &__cta {
     @include padding-left(65px);
     @include margin-bottom(20px);
     @include padding-top(20px);
     @include padding-bottom(20px);
     max-width: 350px;
-    min-width: 350px;
     width: 100%;
     background: red;
     border-radius: 0;
@@ -57,7 +65,6 @@
     box-shadow: 0px 1px 4px 0px rgba(0,0,0,0.25);
     position: relative;
     display: block;
-    max-height: 60px;
 
     &:hover {
       background-color: color('seafoam-blue');
@@ -75,5 +82,10 @@
     flex-wrap: wrap;
     justify-content: flex-end;
     align-content: flex-start;
+    flex-direction: column;
+
+    @include breakpoint($desktop) {
+      flex-direction: row;
+    }
   }
 }
