--- a/src/components/components/club-info/club-info.scss
+++ b/src/components/components/club-info/club-info.scss
@@ -24,7 +24,7 @@
     border-radius: 2px;
     overflow: hidden;
     max-width: 350px;
-    min-width: 350px;
+    width: 100%;
     display: block;
   }
 
