--- a/src/components/components/formated-text/formated-text.scss
+++ b/src/components/components/formated-text/formated-text.scss
@@ -1,5 +1,9 @@
 @import './../../base-styles/init/init.scss';
 
+/*
+  Text with standard prefix. Highlights the variable value.
+*/
+
 .formated-text {
   display: inline-block;
   margin-top: auto;
@@ -11,7 +15,7 @@
     vertical-align: middle;
     color: color('brand');
     position: absolute;
-    left: -33px;
+    left: -37px; // icon size + distance from text
     top: 50%;
     transform: translateY(-50%);
   }
